fixed scrollbar

--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -5,4 +5,5 @@
   max-width: 300px;
   left: 0;
   transition: all 0.5 ease;
+  overflow: hidden;
 }
