--- a/src/view/About.scss
+++ b/src/view/About.scss
@@ -6,6 +6,28 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  overflow: scroll;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none;
+}
+
+.page-container::-webkit-scrollbar {
+  display: none;
+}
+
+.text-container {
+  margin: 50px 0;
+  padding: 10px 20px;
+  background-image: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0.623) 10%,
+    rgba(255, 255, 255, 0)
+  );
+  border-top-left-radius: 10%;
+  border-bottom-left-radius: 10%;
+  //display: flex;
+  //align-items: center;
+  //align-content: space-around;
 }
 
 .images-container {
@@ -28,7 +50,7 @@
     font-size: 50px;
   }
   p {
-    color: rgb(92, 92, 92);
+    color: rgb(0, 0, 0);
     font-weight: bold;
     //background-color: rgba(255, 255, 255, 0.438);
     font-size: 18px;
