--- a/src/view/Home.scss
+++ b/src/view/Home.scss
@@ -4,5 +4,12 @@
   width: 100%;
   background-image: linear-gradient(0deg, #040b1400, #040b14, #040b1400);
   margin: -10px 0 -10px 0;
-  z-index: 1;
+  z-index: 0;
+overflow: scroll;
+-ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none; 
+}
+
+.page-division::-webkit-scrollbar {
+  display: none;
 }
